After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 729731 - Sbcenc failed to initialize when trying to stream over BT.
Sbcenc failed to initialize when trying to stream over BT.
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
1.x
Other Linux
: Normal major
: 1.2.5
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2014-05-07 16:23 UTC by corrosion
Modified: 2014-05-14 09:49 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Detailed debug log (652.73 KB, text/plain)
2014-05-07 16:30 UTC, corrosion
Details

Description corrosion 2014-05-07 16:23:01 UTC
root@arm:~# GST_DEBUG=*:3 gst-launch-1.0 audiotestsrc ! sbcenc ! a2dpsink transport=/org/bluez/1488/hci0/dev_00_0C_8A_8D_4E_25/fd0
Setting pipeline to PAUSED ...
Pipeline is PREROLLING ...
0:00:00.437774791  1584   0x146120 FIXME                default gstutils.c:3649:gst_pad_create_stream_id_printf_valist:<audiotestsrc0:src> Creating random stream-id, consider implementing a deterministic way of creating a stream-id

(gst-launch-1.0:1584): GStreamer-CRITICAL **: gst_structure_fixate_field_string: assertion 'gst_structure_has_field (structure, field_name)' failed

(gst-launch-1.0:1584): GStreamer-CRITICAL **: gst_structure_fixate_field_string: assertion 'gst_structure_has_field (structure, field_name)' failed

(gst-launch-1.0:1584): GStreamer-CRITICAL **: gst_structure_fixate_field_string: assertion 'gst_structure_has_field (structure, field_name)' failed
0:00:00.446203375  1584   0x146120 WARN            audioencoder gstaudioencoder.c:1208:gst_audio_encoder_chain:<sbcenc0> error: encoder not initialized
ERROR: from element /GstPipeline:pipeline0/GstSbcEnc:sbcenc0: GStreamer error: negotiation problem.
Additional debug info:
gstaudioencoder.c(1208): gst_audio_encoder_chain (): /GstPipeline:pipeline0/GstSbcEnc:sbcenc0:
encoder not initialized
ERROR: pipeline doesn't want to preroll.
Setting pipeline to NULL ...
Freeing pipeline ...
root@arm:~#
Comment 1 corrosion 2014-05-07 16:30:32 UTC
Created attachment 276090 [details]
Detailed debug log
Comment 2 Wim Taymans 2014-05-14 09:49:42 UTC
commit ccccad4d8d02eabfa1f3041045b9a34acf4269a5
Author: Wim Taymans <wtaymans@redhat.com>
Date:   Wed May 14 11:47:03 2014 +0200

    bluez: fix property names
    
    These were forgotten when they got renamed.
    
    Fixes https://bugzilla.gnome.org/show_bug.cgi?id=729731